[project]
name = "openenv-fulfillment"
version = "0.1.0"
description = "OpenEnv warehouse fulfillment environment"
authors = [{ name = "Your Name" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.1.0"
]

[project.scripts]
server = "api:app"

[tool.openenv]
entrypoint = "api:app"
